--- a/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Conversions.cs" />
     <Compile Include="GradientRectangle.cs" />
     <Compile Include="HitPoint.cs" />
+    <Compile Include="LightSource.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="Sphere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
