--- a/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -99,6 +100,17 @@
       <Project>{e05721db-24fe-4b1f-98fc-a530a83fc2fd}</Project>
       <Name>Comgr.CourseProject.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\arroway.de_tiles-29_d100.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\boden_0125_c.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\TilePattern-n1_UR_1024.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
