refactor triangle class add diffuse lambert add specular phong add normal transform

--- a/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CheckerProceduralTexture.cs" />
     <Compile Include="Conversions.cs" />
     <Compile Include="GradientRectangle.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="HitPoint.cs" />
     <Compile Include="LightSource.cs" />
     <Compile Include="ITexture.cs" />
