--- a/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.Lib/Comgr.CourseProject.Lib.csproj
@@ -50,13 +50,13 @@
     <Compile Include="CheckerProceduralTexture.cs" />
     <Compile Include="Conversions.cs" />
     <Compile Include="GradientRectangle.cs" />
-    <Compile Include="Helper.cs" />
     <Compile Include="HitPoint.cs" />
     <Compile Include="LightSource.cs" />
     <Compile Include="ITexture.cs" />
     <Compile Include="Matrix2x2.cs" />
     <Compile Include="RandomExtensions.cs" />
     <Compile Include="Ray.cs" />
+    <Compile Include="RenderingExtensions.cs" />
     <Compile Include="SceneB.cs" />
     <Compile Include="Sphere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
