--- a/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
@@ -115,6 +115,12 @@
     <Content Include="Resources\boden_0125_c.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\brick_texture1884.jpg_.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Tileable_Red_brick_texture_DIFFUSE.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\TilePattern-n1_UR_1024.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
