--- a/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/Comgr.CourseProject.UI.csproj
@@ -118,6 +118,9 @@
     <Content Include="Resources\brick_texture1884.jpg_.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\mr-bean-64.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Tileable_Red_brick_texture_DIFFUSE.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
